Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
5.12.4
Description
Protect usage of QPixmapCache in QPixmapIconEngine when it is not in the main thread. As it is possible that the QIcon will be used from another thread to get the pixmap, it should only check the QPixmapCache if it is accessed from the main thread.
Attachments
Issue Links
- relates to
-
QTBUG-72523 Loading QPixmap from a file in non-gui threads is not safe
-
- Closed
-
For Gerrit Dashboard: QTBUG-76694 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
248445,3 | QPixmapCache: guard against usage from non-main threads | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |